--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.13.0",
     "i": "^0.3.7",
     "next": "13.0.2",
     "npm": "^8.19.3",
