--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-toastify": "^9.1.1",
     "typescript": "4.8.4",
     "zod": "^3.19.1"
   },
